Adiciona Wicked PDF

--- a/app/views/movimentacoes/index.html.erb
+++ b/app/views/movimentacoes/index.html.erb
@@ -10,10 +10,11 @@
     </div>
   </div>
 
-  <div class="col-12 col-md-4 p-6">
+  <div class="col-12 col-md-4 p-6 d-flex flex-column gap-3">
     <%= link_to new_movimentacao_path, class: "btn btn-primary" do %>
       <span>Nova Movimentação</span>
     <% end %>
+    <%= link_to "Gerar Relatório", relatorio_movimentacoes_path(format: :pdf), target: :blank, class: "btn btn-success" %>
   </div>
 
   <div class="col-12 col-md-4 p-6">
