--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AppFinancas</title>
+    <title>App Finanças</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -14,5 +14,7 @@
     <div class="container my-4">
       <%= yield %>
     </div>
+
+    <%= render "shared/flash" %>
   </body>
 </html>
